# crop_and_skew_light_image_on_gray

./: .gitignore  .setup.cfg  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  versionfile.txt
ai_crop_images/: image_barcode.py  image_scanner.py  logger.py  main.py  parse_args.py
script/: build-l.cmd  build-version.py  build.cmd  versionfile.txt
tests/: test_01.py
